18888
```scala
trait Universe {
  type Symbol >: Null <: AnyRef with SymbolApi
  trait SymbolApi

  type FreeTypeSymbol >: Null <: FreeTypeSymbolApi with Symbol
  trait FreeTypeSymbolApi extends SymbolApi

  implicit class CompatibleSymbol(sym: Symbol) {
    def asFreeType: FreeTypeSymbol = ???
  }
}

object Test extends App {
  val u: Universe = ???
  import u._

  val sym: Symbol = ???
  sym.asFreeType
}
```
```scala
21:43 ~/Projects/palladium0/sandbox (topic/palladium0)$ s
Test.scala:18: error: value asFreeType is not a member of Test.u.Symbol
  sym.asFreeType
      ^
one error found
```
